--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<!--jsfile--startTag-->
 	<script src="js/3rd8334a2ea.js"></script>
 	<script src="js/protod51902ee.js"></script>
-	<script src="js/initb4f1495f.js"></script>
+	<script src="js/initc85a8755.js"></script>
 	<script src="js/texts/zh-cht94b9d1de.js"></script>
 	<script src="js/util06e93fc5.js"></script>
 	<script src="js/miscf05f7498.js"></script>
